--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Acceso denegado</title>
-</head>
-<body>
-  <h1>Forbidden</h1>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>GoogleSignIn</title>
+
+		<meta
+			name="google-signin-client_id"
+			content="821684218320-srbfrae370q29phemct9iou4pgf98bg0.apps.googleusercontent.com"
+		/>
+	</head>
+	<body>
+		<h1>Forbidden</h1>
+
+		<div class="g-signin2" data-onsuccess="onSignIn"></div>
+		<a href="#" onclick="signOut();">Sign out</a>
+
+		<script>
+			function signOut() {
+				var auth2 = gapi.auth2.getAuthInstance()
+				auth2.signOut().then(function () {
+					console.log("User signed out.")
+				})
+			}
+		</script>
+
+		<script src="https://apis.google.com/js/platform.js" async defer></script>
+
+		<script>
+			var url =
+				window.location.hostname === "localhost"
+					? "http://localhost:3001/api/auth/google"
+					: "urlproduccion"
+
+			function onSignIn(googleUser) {
+				var id_token = googleUser.getAuthResponse().id_token
+				var profile = googleUser.getBasicProfile()
+				console.log("ID: " + profile.getId()) // Do not send to your backend! Use an ID token instead.
+				console.log("Name: " + profile.getName())
+				console.log("Image URL: " + profile.getImageUrl())
+				console.log("Email: " + profile.getEmail()) // This is null if the 'email' scope is not present.
+
+				fetch(url, {
+					method: "post",
+					headers: { "Content-Type": "application/json" },
+					body: JSON.stringify({id_token})
+				})
+					.then(res => res.json())
+					.then(data => console.log("trae esto desde el server", data))
+					.catch(console.log)
+			}
+		</script>
+	</body>
 </html>
